--- a/order/templates/order/index.html
+++ b/order/templates/order/index.html
@@ -64,12 +64,17 @@
         </div>
       </li>
     </ul>
-    <!--
+{% if user.is_authenticated %}
+    Welcome {{ user.get_username }}
+    <a href="">Logout</a>
+{% else %}
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2" type="text" placeholder="Phone, email or username" aria-label="Phone, email or username">
+      <input class="form-control mr-sm-2" type="text" placeholder="Password" aria-label="Password">
+      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Login</button>
+      <a href="">Forgot password?</a>
     </form>
-    -->
+{% endif %}
   </div>
 </nav>
 
@@ -77,21 +82,32 @@
 
   <div class="starter-template">
     <h1>Bootstrap starter template</h1>
+
+{% if not user.is_authenticated %}
+    <form class="form-signin">
+  <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+  <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+  <label for="inputEmail" class="sr-only">Email address</label>
+  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+  <label for="inputPassword" class="sr-only">Password</label>
+  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+  <div class="checkbox mb-3">
+    <label>
+      <input type="checkbox" value="remember-me"> Remember me
+    </label>
+  </div>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
+  </form>
+
+{% else %}
+
     <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
 Welcome to trade {{ num_visits }}
 
-{% if user.is_authenticated %}
-    User: {{ user.get_username }}
-    logout
-{% else %}
-    login
+    Welcome
 {% endif %}
 
-Bitcoin:
-orderbook
-{% if user.is_authenticated %}
-    account
-{% endif %}
   </div>
 
 </main><!-- /.container -->
