--- a/order/templates/index.html
+++ b/order/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'order/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
   <div class="starter-template">
     <h1>Bootstrap starter template</h1>
