--- a/order/templates/base.html
+++ b/order/templates/base.html
@@ -66,11 +66,12 @@
     </ul>
 {% if user.is_authenticated %}
     Welcome {{ user.get_username }}
-    <a href="">Logout</a>
+    <a href="/logout/">Logout</a>
 {% else %}
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Phone, email or username" aria-label="Phone, email or username">
-      <input class="form-control mr-sm-2" type="text" placeholder="Password" aria-label="Password">
+    <form class="form-inline my-2 my-lg-0" method="post" action="{% url 'login' %}">
+      {% csrf_token %}
+      <input class="form-control mr-sm-2" name="username" type="text" placeholder="Phone, email or username" aria-label="Phone, email or username">
+      <input class="form-control mr-sm-2" name="password" type="password" placeholder="Password" aria-label="Password">
       <button class="btn btn-secondary my-2 my-sm-0" type="submit">Login</button>
       <a href="">Forgot password?</a>
     </form>
