--- a/order/templates/index.html
+++ b/order/templates/index.html
@@ -4,20 +4,24 @@
     <h1>Bootstrap starter template</h1>
 
 {% if not user.is_authenticated %}
-    <form class="form-signin">
+<form class="form-signin" method="post" action="{% url 'register' %}">
+      {% csrf_token %}
   <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+  <label for="inputEmail" class="sr-only">Username</label>
+  <input name="username" type="text" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
   <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+  <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
   <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-  <div class="checkbox mb-3">
+  <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+  <label for="inputPassword" class="sr-only">Re-enter password</label>
+  <input name="password_again" type="password" id="inputPassword" class="form-control" placeholder="Re-enter password" required>
+  <!--<div class="checkbox mb-3">
     <label>
       <input type="checkbox" value="remember-me"> Remember me
     </label>
-  </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
+  </div>-->
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
   </form>
 
 {% else %}
